<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/user"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/event"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_myrequest"
            android:icon="@drawable/report"
            android:title="@string/menu_requestlist" />
        <item
            android:id="@+id/nav_rateus"
            android:icon="@drawable/star"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/lock"
            android:title="@string/menu_password" />
        <item
            android:id="@+id/nav_out"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>